--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -14,9 +14,7 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: 3.1.0
-
-      - name: Install dependencies
-        run: bundle install
+          bundle-cache: true
 
       - name: Run tests
         run: bundle exec rspec
