--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -16,5 +16,8 @@ jobs:
           ruby-version: 3.1.0
           bundle-cache: true
 
+      - name: Install dependencies
+        run: bundle install
+
       - name: Run tests
         run: bundle exec rspec
